# semiont

./: .gitignore  .redocly.yaml  .stylelintrc.json  CONTRIBUTING.md  README.md  SECURITY.md  build-images.sh  codecov.yml  package-lock.json  package.json  tsconfig.json  version.json  vitest.shared.config.ts
.devcontainer/: .env.example  .gitignore  Dockerfile  PREBUILD.md  README-ENVIRONMENTS.md  README.md  devcontainer.build.json  devcontainer.json  docker-compose.yml  environments-local-production.json  environments-local.json  envoy.yaml  make-meaning.sh  post-create.sh  prompt-setup.sh  semiont.json  setup-instructions.txt  setup.sh  start-envoy.sh  start-services.sh  welcome.txt
.github/: ACTIONS.md  codecov-settings.md  dependabot.yml  pull_request_template.md
apps/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
cdk/: package.json
config/: .gitignore  README.md  index.ts  package-lock.json  package.json  test-config-loader.ts  tsconfig.json
demo/: .env.example  .gitignore  CONTAINER.md  README.md  citizens_united.ts  demo.ts  freelaw_nh.ts  package.json  pro_bo.ts  tsconfig.json
docs/: ARCHITECTURE-NEXT.md  ARCHITECTURE.md  ARTIFACTS.md  AUTHENTICATION.md  CONFIGURATION.md  CONTENT-STORE.md  DATABASE.md  DEPLOYMENT.md  EVENT-STORE.md  GRAPH.md  IMAGES.md  KNOWLEDGE-BASES.md  LOCAL-DEVELOPMENT.md  LOCAL-SEMIONT.md  MAINTENANCE.md  PROJECT-LAYOUT.md  PROJECTION.md  RBAC.md  RELEASE.md  SCALING.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  plan.md  (+1 more)
(+2063 files in other folders)
